FullQa New/src/objects/GlobalSurveyResults__c.object
<CustomObject>
    <description>Used to track ClickTools (Vendor) survey results from the global needs opportunity survey</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2BText__c</fullName>
        <description>Any additional information the customer might want to provide if their business is primarily a B2B business</description>
        <inlineHelpText>Any additional information the customer might want to provide if their business is primarily a B2B business</inlineHelpText>
        <label>B2B Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_B2C_Percent__c</fullName>
        <description>If both B2B and B2C, provide percentage</description>
        <inlineHelpText>If both B2B and B2C, provide percentage</inlineHelpText>
        <label>B2B / B2C %</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2BorB2C__c</fullName>
        <description>Does your organization make business-to-business (b2b) or business-to-consumer (b2c) supplies?</description>
        <inlineHelpText>Does your organization make business-to-business (b2b) or business-to-consumer (b2c) supplies?</inlineHelpText>
        <label>B2B or B2C?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2CText__c</fullName>
        <description>Any additional information the customer might want to provide if their business is primarily a B2C business</description>
        <inlineHelpText>Any additional information the customer might want to provide if their business is primarily a B2C business</inlineHelpText>
        <label>B2C Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountriesImportedInto__c</fullName>
        <description>which countries does your organization import into?</description>
        <inlineHelpText>which countries does your organization import into?</inlineHelpText>
        <label>Countries Imported Into</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerCountryList__c</fullName>
        <description>In which countries is your organization’s customers based?</description>
        <inlineHelpText>In which countries is your organization’s customers based?</inlineHelpText>
        <label>Customer Country List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GlobalSurveyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Survey Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Global_Survey_Resutls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImportGoods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does your organization import goods?
(Checked = Yes, Unchecked = No)</description>
        <inlineHelpText>Does your organization import goods?
(Checked = Yes, Unchecked = No)</inlineHelpText>
        <label>Import Goods?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityOwnerEmail__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Global_Survey_Resutls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrganizationHomeCountry__c</fullName>
        <description>What is your organization’s home country?</description>
        <inlineHelpText>What is your organization’s home country?</inlineHelpText>
        <label>Organization Home Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSourcing_Routing__c</fullName>
        <description>please identify how product is sourced, where product is sourced, and how product is routed (any chain supply activity) to the customer</description>
        <inlineHelpText>please identify how product is sourced, where product is sourced, and how product is routed (any chain supply activity) to the customer</inlineHelpText>
        <label>Product Sourcing / Routing</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductsShippedDirectly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are the products shipped directly from your organization’s location to your customer’s location?
(Checked = Yes, Unchecked = No)</description>
        <inlineHelpText>Are the products shipped directly from your organization’s location to your customer’s location?
(Checked = Yes, Unchecked = No)</inlineHelpText>
        <label>Products Shipped Directly?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductsSold__c</fullName>
        <description>What does your organization sell?</description>
        <inlineHelpText>What does your organization sell?</inlineHelpText>
        <label>Products Sold</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegisteredVAT_GSTCountryList__c</fullName>
        <description>In which countries is your organization registered to collect VAT or GST, and is the registration resident or non-resident?  Please identify gross annual sales, in round thousand increments, by country for both registered and non-registered countries.</description>
        <inlineHelpText>In which countries is your organization registered to collect VAT or GST, and is the registration resident or non-resident?  Please identify gross annual sales, in round thousand increments, by country for both registered and non-registered countries.</inlineHelpText>
        <label>Registered VAT / GST Country List</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Global Survey Results</label>
    <nameField>
        <label>Global Survey Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Survey Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>